syntax = "proto3";

package messages;

message PeerInfo {
	uint32 peer_id = 1;
	bytes pk = 2;
	bytes sharedkey = 3;
}

message CoinJoinReq {
    
}

message CoinJoinRes {	
    uint32 session_id = 2;
	uint32 peer_id = 3;
	repeated uint64 peer_ids = 4;
}

message KeyExchangeReq {	
    uint32 session_id = 1;
	uint32 peer_id = 2;
	uint32 num_msg = 3;	
	bytes pk = 4;
}

message KeyExchangeRes {	
    uint32 session_id = 1;
	uint32 peer_id = 2;
	uint32 num_msg = 3;
	repeated PeerInfo peers = 4;
}

message DcExpVector {
	uint32 peer_id = 1;
	uint32 len = 2;
	bytes vector = 3;
	bytes commit = 4;
}

message DcSimpleVector {
	uint32 peer_id = 1;
	uint32 len = 2;
	bytes vector = 3;
}



